crates/lark-syntax/src/parser.rs
//! The Lark parser.
//!
//! The parser is a hand written recursive descent parser. It always produces a
//! tree, even for a file that does not parse, so a language server can work on
//! broken code.
//!
//! The parser asks a [`NameOracle`] whenever a decision needs to know if an
//! identifier binds to a type. Rule L-6 is the main case. Phase 1 uses
//! [`NoNames`], so a decision that needs a user type falls back to the
//! syntactic rules. Phase 2 supplies the real oracle.
//!
//! [`NoNames`]: crate::oracle::NoNames

use lark_diag::{Code, LK0102, LK0110};
use lark_span::Span;
use rowan::{Checkpoint, GreenNode, GreenNodeBuilder};

// The parser matches on nearly every variant of the enum, so it imports
// them all. Rule C-2.1 asks for the shape of the walk to stay readable,
// and a list of 175 names in the header does not help a reader.
#[allow(clippy::enum_glob_use)]
use crate::kind::SyntaxKind::{self, *};
use crate::lexer::{Token, tokenize};
use crate::oracle::{Binding, NameOracle};
use crate::tree::{Lark, SyntaxNode};

/// A problem that the lexer or the parser found.
#[derive(Clone, Copy, PartialEq, Eq, Debug)]
pub struct SyntaxError {
    /// The diagnostic code.
    pub code: Code,
    /// The region that the problem covers.
    pub span: Span,
}

/// The result of a parser run.
#[derive(Clone, Debug)]
pub struct Parse {
    green: GreenNode,
    errors: Vec<SyntaxError>,
}

impl Parse {
    /// Returns the root of the tree.
    #[must_use]
    pub fn syntax(&self) -> SyntaxNode {
        SyntaxNode::new_root(self.green.clone())
    }

    /// Returns every problem, in source order.
    #[must_use]
    pub fn errors(&self) -> &[SyntaxError] {
        &self.errors
    }

    /// Returns the text of the whole tree.
    ///
    /// The result equals the source. That is invariant R.
    #[must_use]
    pub fn text(&self) -> String {
        self.syntax().text().to_string()
    }

    /// Returns the tree in the form that a snapshot test compares.
    #[must_use]
    pub fn tree_text(&self) -> String {
        crate::tree::print(&self.syntax())
    }
}

/// Parses source text into a tree.
pub fn parse(source: &str, oracle: &dyn NameOracle) -> Parse {
    let lexed = tokenize(source);
    let mut errors: Vec<SyntaxError> = lexed
        .errors
        .iter()
        .map(|error| SyntaxError {
            code: error.code,
            span: error.span,
        })
        .collect();

    let mut parser = Parser {
        source,
        tokens: lexed.tokens,
        position: 0,
        builder: GreenNodeBuilder::new(),
        errors: Vec::new(),
        oracle,
        half_angle: false,
        scopes: Vec::new(),
    };
    parser.source_file();

    errors.append(&mut parser.errors);
    errors.sort_by_key(|error| (error.span.start, error.code));
    Parse {
        green: parser.builder.finish(),
        errors,
    }
}

/// The parser state.
struct Parser<'a> {
    source: &'a str,
    tokens: Vec<Token>,
    /// The index of the next token, trivia included.
    position: usize,
    builder: GreenNodeBuilder<'static>,
    errors: Vec<SyntaxError>,
    oracle: &'a dyn NameOracle,
    /// True when the first half of a `>>` token closed a generic list.
    ///
    /// `Box<Data<int>>` ends with one `>>` token, because C needs `>>` for a
    /// shift. The parser splits it into two `>` tokens in the tree.
    half_angle: bool,
    /// The local scopes that are open at the cursor, outermost first.
    ///
    /// Rule L-6 resolves a name in the innermost enclosing scope. A local
    /// declaration therefore hides a type of the same name from that point on.
    /// See rule L-16.
    scopes: Vec<Vec<(String, Binding)>>,
}

// ---------------------------------------------------------------------------
// Token navigation
// ---------------------------------------------------------------------------

impl Parser<'_> {
    /// Returns the index of the token `steps` places ahead, trivia skipped.
    fn index_of(&self, steps: usize) -> Option<usize> {
        let mut left = steps;
        for index in self.position..self.tokens.len() {
            if self.tokens[index].kind.is_trivia() {
                continue;
            }
            if left == 0 {
                return Some(index);
            }
            left -= 1;
        }
        None
    }

    /// Returns the kind of the token `steps` places ahead, trivia skipped.
    fn nth(&self, steps: usize) -> SyntaxKind {
        if steps == 0 && self.half_angle {
            return R_ANGLE;
        }
        self.index_of(steps)
            .map_or(EOF, |index| self.tokens[index].kind)
    }

    /// Returns the text of the token `steps` places ahead, trivia skipped.
    fn nth_text(&self, steps: usize) -> &str {
        self.index_of(steps)
            .and_then(|index| self.source.get(self.tokens[index].span.as_range()))
            .unwrap_or_default()
    }

    /// Returns the span of the current token, or an empty span at the end.
    fn span(&self) -> Span {
        self.index_of(0).map_or_else(
            || Span::at(u32::try_from(self.source.len()).unwrap_or(u32::MAX)),
            |index| self.tokens[index].span,
        )
    }

    /// Reports whether the current token has the given kind.
    fn at(&self, kind: SyntaxKind) -> bool {
        self.nth(0) == kind
    }

    /// Reports whether the current token is an identifier with the given text.
    ///
    /// Every Lark keyword is contextual, so the parser matches on text here.
    /// See rule L-3.
    fn at_word(&self, word: &str) -> bool {
        self.nth(0) == IDENT && self.nth_text(0) == word
    }

    /// Reports whether the token `steps` ahead is an identifier with the text.
    fn nth_word(&self, steps: usize, word: &str) -> bool {
        self.nth(steps) == IDENT && self.nth_text(steps) == word
    }

    /// Reports whether the parser reached the end of the file.
    fn at_end(&self) -> bool {
        self.index_of(0).is_none()
    }
}

// ---------------------------------------------------------------------------
// Tree building
// ---------------------------------------------------------------------------

impl Parser<'_> {
    /// Adds every trivia token at the cursor to the tree.
    ///
    /// The parser calls this before it opens a node, so trivia attaches to the
    /// parent rather than to the node that follows it.
    fn eat_trivia(&mut self) {
        while let Some(token) = self.tokens.get(self.position) {
            if !token.kind.is_trivia() {
                break;
            }
            let text = self.source.get(token.span.as_range()).unwrap_or_default();
            self.builder.token(Lark::raw(token.kind), text);
            self.position += 1;
        }
    }

    /// Opens a node.
    fn start(&mut self, kind: SyntaxKind) {
        self.eat_trivia();
        self.builder.start_node(Lark::raw(kind));
    }

    /// Closes the innermost open node.
    fn finish(&mut self) {
        self.builder.finish_node();
    }

    /// Marks a place where a node can start later.
    fn checkpoint(&mut self) -> Checkpoint {
        self.eat_trivia();
        self.builder.checkpoint()
    }

    /// Wraps everything added since the checkpoint in a node.
    fn wrap(&mut self, checkpoint: Checkpoint, kind: SyntaxKind) {
        self.builder.start_node_at(checkpoint, Lark::raw(kind));
        self.builder.finish_node();
    }

    /// Adds the current token to the tree and advances.
    fn bump(&mut self) {
        // A `>>` that closed one generic list still holds a second `>`. Any
        // path that leaves the generic grammar must consume it, or `nth` keeps
        // reporting a token that the parser never takes.
        if self.half_angle {
            self.half_angle = false;
            self.eat_trivia();
            self.builder.token(Lark::raw(R_ANGLE), ">");
            self.position += 1;
            return;
        }
        self.eat_trivia();
        let Some(token) = self.tokens.get(self.position) else {
            return;
        };
        let text = self.source.get(token.span.as_range()).unwrap_or_default();
        self.builder.token(Lark::raw(token.kind), text);
        self.position += 1;
    }

    /// Reports a problem at the current token.
    fn error(&mut self, code: Code) {
        let span = self.span();
        // One report per position is enough. A cascade helps nobody.
        if self
            .errors
            .last()
            .is_some_and(|last| last.span.start == span.start)
        {
            return;
        }
        self.errors.push(SyntaxError { code, span });
    }

    /// Adds the token when it matches, and reports a problem when it does not.
    fn expect(&mut self, kind: SyntaxKind) -> bool {
        if self.at(kind) {
            self.bump();
            return true;
        }
        self.error(LK0110);
        false
    }

    /// Wraps the current token in an error node and advances.
    ///
    /// The token stays in the tree, so invariant R holds.
    fn bump_error(&mut self) {
        if self.at_end() {
            return;
        }
        self.error(LK0110);
        self.start(ERROR);
        self.bump();
        self.finish();
    }

    /// Adds one `>` that closes a generic list, and splits `>>` when needed.
    fn bump_close_angle(&mut self) {
        if self.half_angle {
            self.half_angle = false;
            self.builder.token(Lark::raw(R_ANGLE), ">");
            self.position += 1;
            return;
        }
        if self.at(SHR) {
            self.eat_trivia();
            self.half_angle = true;
            self.builder.token(Lark::raw(R_ANGLE), ">");
            return;
        }
        self.bump();
    }

    /// Skips tokens into an error node until one of the kinds, or the end.
    fn recover_to(&mut self, stops: &[SyntaxKind]) {
        if self.at_end() || stops.contains(&self.nth(0)) {
            return;
        }
        self.error(LK0110);
        self.start(ERROR);
        while !self.at_end() && !stops.contains(&self.nth(0)) {
            self.bump();
        }
        self.finish();
    }
}

impl Lark {
    /// Converts a kind for the tree builder.
    fn raw(kind: SyntaxKind) -> rowan::SyntaxKind {
        rowan::SyntaxKind(kind.to_raw())
    }
}

// ---------------------------------------------------------------------------
// Local scopes
// ---------------------------------------------------------------------------

impl Parser<'_> {
    /// Opens a scope.
    fn push_scope(&mut self) {
        self.scopes.push(Vec::new());
    }

    /// Closes every scope past a depth.
    fn truncate_scopes(&mut self, depth: usize) {
        self.scopes.truncate(depth);
    }

    /// Records a name in the innermost open scope.
    fn declare(&mut self, name: &str, binding: Binding) {
        if let Some(scope) = self.scopes.last_mut() {
            scope.push((name.to_owned(), binding));
        }
    }

    /// Returns the binding of a name, innermost scope first.
    ///
    /// Rule L-6. A local declaration hides a module level type of the same
    /// name.
    fn binding_of(&self, name: &str) -> Binding {
        for scope in self.scopes.iter().rev() {
            for (declared, binding) in scope.iter().rev() {
                if declared == name {
                    return *binding;
                }
            }
        }
        self.oracle.binding(name)
    }
}

// ---------------------------------------------------------------------------
// Classification helpers
// ---------------------------------------------------------------------------

/// The words that mark a declaration in Lark. Rule L-3 makes each contextual.
const DECL_MARKERS: &[&str] = &["init", "gc_leaf", "gc_safe"];

/// Compiler extensions that carry a parenthesized group. See rule C-4.
const EXTENSIONS_WITH_GROUP: &[&str] = &[
    "__attribute__",
    "__attribute",
    "__asm",
    "__asm__",
    "__declspec",
];

/// Compiler extensions that name a type. See rule C-4f.
///
/// `__typeof__(x)` names the type of `x`, and `__auto_type` names an inferred
/// type. Neither carries a meaning in Lark, but both stand where a type stands,
/// so the parser reads them as a type specifier instead of skipping them.
const TYPEOF_WORDS: &[&str] = &["__typeof", "__typeof__", "typeof", "__auto_type"];

/// Compiler extensions that stand alone. See rule C-4.
const EXTENSIONS_ALONE: &[&str] = &[
    "__extension__",
    "_Nullable",
    "_Nonnull",
    "_Null_unspecified",
    "_Nullable_result",
];

/// What the declaration specifiers say about the declaration that follows.
#[derive(Clone, Copy, Debug, Default)]
struct Specifiers {
    /// The specifiers end with a `}` body. Rule O-25 then drops the semicolon.
    saw_body: bool,
    /// The declaration introduces a type name rather than a variable.
    is_typedef: bool,
}

/// What a declarator introduces.
#[derive(Clone, Debug, Default)]
struct Declared {
    /// The name, when the declarator is not abstract.
    name: Option<String>,
    /// The last suffix is a parameter list.
    is_function: bool,
}

impl Parser<'_> {
    /// Reports whether the cursor stands on a compiler extension.
    fn at_extension(&self) -> bool {
        if self.nth(0) != IDENT {
            return false;
        }
        let text = self.nth_text(0);
        EXTENSIONS_ALONE.contains(&text)
            || (EXTENSIONS_WITH_GROUP.contains(&text) && self.nth(1) == L_PAREN)
    }

    /// Returns the number of steps to the token after a parenthesized group.
    ///
    /// The scan stops after a fixed number of steps, so a malformed file costs
    /// nothing.
    fn steps_after_paren_group(&self, open: usize) -> Option<usize> {
        const LIMIT: usize = 128;
        let mut depth = 0usize;
        let mut steps = open;
        while steps < open + LIMIT {
            match self.nth(steps) {
                L_PAREN => depth += 1,
                R_PAREN => {
                    depth -= 1;
                    if depth == 0 {
                        return Some(steps + 1);
                    }
                }
                EOF => return None,
                _ => {}
            }
            steps += 1;
        }
        None
    }

    /// Reports whether the cursor stands on a macro used as an attribute.
    ///
    /// Rule C-4k. A module is not preprocessed, so `static int PRINTF(2) name(`
    /// arrives with the macro unexpanded. A declarator would end the group, so
    /// a name or a star after the group marks the macro instead. The emitted C
    /// keeps the text, and the C compiler expands it.
    fn at_attribute_macro(&self) -> bool {
        if self.nth(0) != IDENT || self.nth(1) != L_PAREN {
            return false;
        }
        // A declarator can carry an attribute of its own, as in
        // `int printf(const char *, ...) __attribute__((format(...)));`. The
        // group there belongs to `printf`, so an extension after it does not
        // make `printf` a macro.
        let Some(after) = self.steps_after_paren_group(1) else {
            return false;
        };
        match self.nth(after) {
            STAR => true,
            IDENT => {
                let text = self.nth_text(after);
                !EXTENSIONS_ALONE.contains(&text) && !EXTENSIONS_WITH_GROUP.contains(&text)
            }
            _ => false,
        }
    }

    /// Reads every compiler extension at the cursor.
    ///
    /// Rule C-4 makes the parser read past an extension without a meaning for
    /// it. Rule C-6 keeps a header from stopping a build.
    fn eat_extensions(&mut self) {
        while self.at_extension() {
            self.start(EXTENSION);
            let text = self.nth_text(0).to_owned();
            self.bump();
            if EXTENSIONS_WITH_GROUP.contains(&text.as_str()) {
                self.paren_group();
            }
            self.finish();
        }
    }

    /// Reports whether the token `steps` ahead can begin a type specifier.
    fn nth_starts_type(&self, steps: usize) -> bool {
        match self.nth(steps) {
            VOID_KW | CHAR_KW | SHORT_KW | INT_KW | LONG_KW | FLOAT_KW | DOUBLE_KW | SIGNED_KW
            | UNSIGNED_KW | BOOL_KW | COMPLEX_KW | IMAGINARY_KW | STRUCT_KW | UNION_KW
            | ENUM_KW | ATOMIC_KW => true,
            IDENT => {
                let text = self.nth_text(steps);
                if TYPEOF_WORDS.contains(&text) {
                    // `__auto_type x = e;` takes no group. The others do.
                    return text == "__auto_type" || self.nth(steps + 1) == L_PAREN;
                }
                text == "gc" || text == "managed" || self.binding_of(text) == Binding::Type
            }
            _ => false,
        }
    }

    /// Reports whether the token `steps` ahead can begin a declaration specifier.
    fn nth_starts_decl_specifier(&self, steps: usize) -> bool {
        match self.nth(steps) {
            CONST_KW | VOLATILE_KW | RESTRICT_KW | TYPEDEF_KW | EXTERN_KW | STATIC_KW
            | REGISTER_KW | THREAD_LOCAL_KW | INLINE_KW | NORETURN_KW | AUTO_KW | ALIGNAS_KW => {
                true
            }
            IDENT => {
                let text = self.nth_text(steps);
                DECL_MARKERS.contains(&text) || self.nth_starts_type(steps)
            }
            _ => self.nth_starts_type(steps),
        }
    }

    /// Reports whether the tokens at `steps` look like a type, by shape.
    ///
    /// The strict test needs the oracle, which phase 1 does not have. A user
    /// type in `gc Person* p` is an identifier that the parser must still read
    /// as a type. The shape of the tokens after it answers the question.
    fn nth_looks_like_type(&self, steps: usize) -> bool {
        if self.nth_starts_type(steps) {
            return true;
        }
        self.nth(steps) == IDENT && matches!(self.nth(steps + 1), IDENT | STAR | L_ANGLE | COLON2)
    }

    /// Reports whether `export` at the cursor is the Lark keyword.
    ///
    /// Rule L-3 recognizes it only where valid C11 cannot parse. In C, `export`
    /// is an ordinary identifier, so `export x;` declares `x` of type `export`.
    /// The keyword reading needs a type after it.
    fn export_is_keyword(&self) -> bool {
        if !self.at_word("export") {
            return false;
        }
        // `export Person* p;` has no keyword after `export`, so the shape of
        // the following tokens decides.
        self.nth(1) == AT || self.nth_starts_decl_specifier(1) || self.nth_looks_like_type(1)
    }

    /// Reports whether `auto` at the cursor asks for type inference.
    ///
    /// Rule L-5. A type specifier after `auto` makes it the C storage class.
    fn auto_is_inference(&self) -> bool {
        self.at(AUTO_KW) && !self.nth_starts_decl_specifier(1)
    }

    /// Reports whether the cursor starts a declaration rather than an expression.
    ///
    /// Inside a block, `a * b;` is a declaration when `a` names a type, and an
    /// expression when it does not. The oracle answers that. Phase 1 falls back
    /// to the shape of the tokens.
    fn at_declaration(&self) -> bool {
        match self.nth(0) {
            CONST_KW | VOLATILE_KW | RESTRICT_KW | TYPEDEF_KW | EXTERN_KW | STATIC_KW
            | REGISTER_KW | THREAD_LOCAL_KW | INLINE_KW | NORETURN_KW | AUTO_KW | ALIGNAS_KW
            | STATIC_ASSERT_KW | VOID_KW | CHAR_KW | SHORT_KW | INT_KW | LONG_KW | FLOAT_KW
            | DOUBLE_KW | SIGNED_KW | UNSIGNED_KW | BOOL_KW | COMPLEX_KW | IMAGINARY_KW
            | STRUCT_KW | UNION_KW | ENUM_KW => true,
            IDENT => {
                let text = self.nth_text(0);
                if text == "gc" || text == "managed" || DECL_MARKERS.contains(&text) {
                    return true;
                }
                // Rule C-4f. `__typeof__(x) y;` declares `y`.
                if TYPEOF_WORDS.contains(&text) {
                    return text == "__auto_type" || self.nth(1) == L_PAREN;
                }
                if self.binding_of(text) == Binding::Type {
                    return true;
                }
                if self.binding_of(text) == Binding::Value {
                    return false;
                }
                // `Person p;` and `Person* p;` are declarations by shape.
                if self.nth(1) == IDENT {
                    return true;
                }
                // `Box<int> a;` is a declaration and `swap<Person>(&a, &b);`
                // is a call. Both start the same way, so look past the closing
                // angle. See rule L-6.
                if self.nth(1) == L_ANGLE && self.nth_starts_type(2) {
                    return self
                        .steps_after_generic_args(1)
                        .is_some_and(|after| matches!(self.nth(after), IDENT | STAR));
                }
                // `stdio::FILE* f;` is a declaration. `stdio::printf(x);` is a
                // call. The token after the name decides. See rule N-2.
                if self.nth(1) == COLON2 && self.nth(2) == IDENT {
                    return matches!(self.nth(3), IDENT | STAR | L_ANGLE);
                }
                self.nth(1) == STAR && self.stars_then_name_then_declaration_end()
            }
            _ => false,
        }
    }

    /// Returns the number of steps to the token after a generic argument list.
    ///
    /// The scan stops at a token that cannot appear in a type, and it stops
    /// after a fixed number of steps, so a malformed file costs nothing.
    fn steps_after_generic_args(&self, open: usize) -> Option<usize> {
        const LIMIT: usize = 64;
        let mut depth = 0usize;
        let mut steps = open;
        while steps < open + LIMIT {
            match self.nth(steps) {
                L_ANGLE => depth += 1,
                R_ANGLE => {
                    depth = depth.checked_sub(1)?;
                    if depth == 0 {
                        return Some(steps + 1);
                    }
                }
                SHR => {
                    depth = depth.checked_sub(2)?;
                    if depth == 0 {
                        return Some(steps + 1);
                    }
                }
                SEMICOLON | L_CURLY | R_CURLY | EOF => return None,
                _ => {}
            }
            steps += 1;
        }
        None
    }

    /// Reports whether a run of stars leads to a name and then a declaration end.
    fn stars_then_name_then_declaration_end(&self) -> bool {
        let mut steps = 1;
        while self.nth(steps) == STAR {
            steps += 1;
        }
        self.nth(steps) == IDENT && matches!(self.nth(steps + 1), SEMICOLON | EQ | COMMA | L_BRACK)
    }

    /// Reports whether the cursor is a `<` that opens a generic argument list.
    ///
    /// Rule L-6. In type position the answer is always yes, because a
    /// comparison cannot appear there. In expression position the oracle
    /// decides.
    fn at_generic_args(&self, type_position: bool) -> bool {
        if !self.at(L_ANGLE) {
            return false;
        }
        if type_position {
            return true;
        }
        if self.nth(1) != IDENT {
            return self.nth_starts_type(1);
        }
        // Rule L-6, and rule L-15 for the unbound case.
        match self.binding_of(self.nth_text(1)) {
            Binding::Type => true,
            Binding::Value => false,
            Binding::Unbound => {
                self.oracle.is_complete() || matches!(self.nth_text(1), "gc" | "managed")
            }
        }
    }
}

// ---------------------------------------------------------------------------
// Items
// ---------------------------------------------------------------------------

impl Parser<'_> {
    /// Parses the whole file.
    fn source_file(&mut self) {
        self.builder.start_node(Lark::raw(SOURCE_FILE));
        // The file itself is a scope. A typedef here must answer rule L-6 in
        // expression position, so a cast such as `(size_t) 0` reads correctly.
        self.push_scope();
        while !self.at_end() {
            let before = self.position;
            self.item();
            if self.position == before {
                self.bump_error();
            }
        }
        // Trailing trivia belongs to the root, so invariant R holds.
        self.eat_trivia();
        self.builder.finish_node();
    }

    /// Parses one top level item.
    fn item(&mut self) {
        if self.at(AT) && !self.export_is_keyword() {
            self.at_item(None);
            return;
        }
        // C11 6.7.10. A static assertion is a declaration at file scope too.
        if self.at(STATIC_ASSERT_KW) {
            self.static_assert_decl();
            return;
        }
        // Rule C-4j. A header guards its declarations with `extern "C" { }`
        // behind `#ifdef __cplusplus`. Lark evaluates no directive, so it sees
        // the block and reads it as a plain group of items.
        if self.at(EXTERN_KW) && self.nth(1) == STRING_LITERAL {
            self.linkage_block();
            return;
        }

        let exported = self.export_is_keyword();
        let skip = usize::from(exported);

        if self.nth(skip) == AT {
            let checkpoint = self.checkpoint();
            self.bump();
            self.at_item(Some(checkpoint));
            return;
        }
        if self.nth_word(skip, "iface") && self.nth(skip + 1) == IDENT {
            self.iface_def(exported);
            return;
        }
        // `for` is a C11 keyword, so it arrives as FOR_KW, not as an identifier.
        // Rule O-26 lets the interface carry arguments, so the word before
        // `for` can be `Show<int>` rather than `Show`.
        if self.nth_word(skip, "impl")
            && self.nth(skip + 1) == IDENT
            && self.nth(self.after_generic_args(skip + 2)) == FOR_KW
        {
            self.impl_def(exported);
            return;
        }
        self.declaration_or_function(exported);
    }

    /// Parses `extern "C" { ... }` or `extern "C" declaration`.
    ///
    /// See rule C-4j. The linkage name carries no meaning in Lark.
    fn linkage_block(&mut self) {
        self.start(LINKAGE_BLOCK);
        self.bump();
        self.bump();
        if self.at(L_CURLY) {
            self.bump();
            while !self.at_end() && !self.at(R_CURLY) {
                let before = self.position;
                self.item();
                if self.position == before {
                    self.bump_error();
                }
            }
            self.expect(R_CURLY);
        } else {
            self.item();
        }
        self.finish();
    }

    /// Parses an item that starts with `@`.
    fn at_item(&mut self, exported: Option<Checkpoint>) {
        let checkpoint = exported.unwrap_or_else(|| self.checkpoint());
        let word = self.nth_text(1).to_owned();
        match word.as_str() {
            "import" => {
                self.bump();
                self.bump();
                if self.at(IDENT) {
                    // Rule N-16. A directory contributes one segment, so an
                    // import names a path rather than a single word.
                    self.start(NAME);
                    self.expect(IDENT);
                    self.path_tail();
                    self.finish();
                } else {
                    self.error(LK0110);
                }
                self.wrap(checkpoint, IMPORT_DIRECTIVE);
            }
            "global" => {
                self.bump();
                self.bump();
                if self.at(L_PAREN) {
                    self.global_attach();
                }
                if self.at(IDENT) {
                    self.name();
                } else {
                    self.error(LK0110);
                }
                self.block_of_declarations();
                self.wrap(checkpoint, GLOBAL_BLOCK);
            }
            _ => {
                self.bump();
                self.error(LK0110);
                self.recover_to(&[SEMICOLON, R_CURLY]);
                if self.at(SEMICOLON) {
                    self.bump();
                }
                self.wrap(checkpoint, ERROR);
            }
        }
    }

    /// Parses `(function)` or `(function, order)` after `@global`.
    fn global_attach(&mut self) {
        self.start(GLOBAL_ATTACH);
        self.expect(L_PAREN);
        if self.at(IDENT) {
            self.name_ref();
        } else {
            self.error(LK0110);
        }
        if self.at(COMMA) {
            self.bump();
            if self.at(INT_NUMBER) {
                self.bump();
            } else {
                self.error(LK0110);
            }
        }
        self.expect(R_PAREN);
        self.finish();
    }

    /// Parses a brace group that holds declarations.
    fn block_of_declarations(&mut self) {
        if !self.at(L_CURLY) {
            self.error(LK0110);
            return;
        }
        self.bump();
        while !self.at_end() && !self.at(R_CURLY) {
            let before = self.position;
            self.declaration_or_function(false);
            if self.position == before {
                self.bump_error();
            }
        }
        self.expect(R_CURLY);
    }

    /// Parses `iface Name { ... }`.
    fn iface_def(&mut self, exported: bool) {
        self.start(IFACE_DEF);
        if exported {
            self.bump();
        }
        self.bump();
        self.name();
        // Rule O-25. An interface takes parameters, and each set of arguments
        // gives one method table, the way rule G-1 gives one record layout.
        if self.at(L_ANGLE) {
            self.generic_params();
        }
        if self.at(L_CURLY) {
            self.bump();
            while !self.at_end() && !self.at(R_CURLY) {
                let before = self.position;
                self.iface_method();
                if self.position == before {
                    self.bump_error();
                }
            }
            self.expect(R_CURLY);
        } else {
            self.error(LK0110);
        }
        self.finish();
    }

    /// Parses one method signature inside an interface.
    fn iface_method(&mut self) {
        self.start(IFACE_METHOD);
        let _ = self.decl_specifiers();
        let _ = self.declarator();
        self.expect(SEMICOLON);
        self.finish();
    }

    /// Parses `impl Iface for Type { ... }`.
    fn impl_def(&mut self, exported: bool) {
        self.start(IMPL_DEF);
        if exported {
            self.bump();
        }
        self.bump();
        self.name_ref();
        // Rule O-26. `impl Show<int> for Buf<int>` names the instantiation on
        // each side, and either side stands alone when it takes no parameters.
        if self.at(L_ANGLE) {
            self.generic_args();
        }
        self.bump();
        self.name_ref();
        if self.at(L_ANGLE) {
            self.generic_args();
        }
        if self.at(L_CURLY) {
            self.bump();
            while !self.at_end() && !self.at(R_CURLY) {
                let before = self.position;
                self.declaration_or_function(false);
                if self.position == before {
                    self.bump_error();
                }
            }
            self.expect(R_CURLY);
        } else {
            self.error(LK0110);
        }
        self.finish();
    }

    /// Parses a declaration, or a function definition.
    fn declaration_or_function(&mut self, exported: bool) {
        let checkpoint = self.checkpoint();
        if exported {
            self.bump();
        }

        let specifiers = self.decl_specifiers();
        let binding = if specifiers.is_typedef {
            Binding::Type
        } else {
            Binding::Value
        };

        if self.at(SEMICOLON) {
            self.bump();
            self.wrap(checkpoint, DECLARATION);
            return;
        }

        // Rule O-25. A definition that ends with `}` needs no semicolon when it
        // declares no variable.
        if specifiers.saw_body && !self.at_declarator_start() {
            self.wrap(checkpoint, DECLARATION);
            return;
        }

        // A parameter belongs to the function, not to the enclosing scope.
        let depth = self.scopes.len();
        self.push_scope();

        let declarator = self.checkpoint();
        let declared = self.declarator();

        // C11 6.9.1. An old style definition puts the parameter types between
        // the declarator and the body, as in `int add(a, b) int a; int b; {`.
        if declared.is_function && !self.at(L_CURLY) && self.at_declaration() {
            self.kr_param_list();
        }

        if declared.is_function && self.at(L_CURLY) {
            self.block_stmt();
            self.truncate_scopes(depth);
            if let Some(name) = declared.name {
                self.declare(&name, binding);
            }
            self.wrap(checkpoint, FN_DEF);
            return;
        }

        self.truncate_scopes(depth);
        if let Some(name) = &declared.name {
            let name = name.clone();
            self.declare(&name, binding);
        }

        if self.at(EQ) {
            self.bump();
            self.initializer();
        }
        self.wrap(declarator, INIT_DECLARATOR);
